# dbmesh

./: README.md
clients/: README.md  main.py
dbmesh/: Dockerfile  config.yaml  main.py  pyproject.toml  server.py
dbmesh/core/: config.py
dbmesh/db/: base.py  example.py  postgres.py
dbmesh/tests/: __init__.py  run_tests.py
dbmesh/tests/core/: __init__.py  test_config.py
